plugin/src/test/resources/testData/foo/language/annotators/functions/SingleQuote_expected.camel
<error descr="Unterminated String Literal">'</error>